Exercice : mettre à jour une activité en cours

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 /chapitres_maxime/Live-Activities/Live-Activities.xcodeproj/project.xcworkspace/xcuserdata/mbritto.xcuserdatad
+/chapitres_maxime/Live-Activities/Live-Activities.xcodeproj/xcuserdata/mbritto.xcuserdatad
